<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>ProcessManager</groupId>
  <artifactId>ProcessManager</artifactId>
  <version>0.0.1-SNAPSHOT</version>
  <organization>
    <name>Fritz Salar</name>
    <url>http://facebook.com/kenken023</url>
  </organization>
  <build>  
    <plugins>
      <plugin>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.5.1</version>
        <configuration>
          <source>1.8</source>
          <target>1.8</target>
        </configuration>
      </plugin>
	  
	  <plugin>
    	<groupId>org.apache.maven.plugins</groupId>
    	<artifactId>maven-antrun-plugin</artifactId>
    	<version>1.8</version>
    	<executions>
  			<execution>
            	<phase>test</phase>
            	<goals>
                	<goal>run</goal>
            	</goals>
            	<configuration>
                	<tasks>
                    	<echo>Using env.test.properties</echo>
                    	<copy file="config.xml" tofile="${basedir}/target/jfx/app/config.xml"/>
                    	<copy file="runner.sh" tofile="${basedir}/target/jfx/app/runner.sh"/>
                    </tasks>
                </configuration>
            </execution>
        </executions>
      </plugin>

      <plugin>
		<groupId>com.zenjava</groupId>
		<artifactId>javafx-maven-plugin</artifactId>
		<version>8.6.0</version>
		<configuration>
			<mainClass>com.fritzsalar.Main</mainClass>
			<identifier></identifier>
		</configuration>
	  </plugin>

    </plugins>
  </build>
</project>